created a project station for all my class projects

--- a/index.html
+++ b/index.html
@@ -32,8 +32,49 @@
         </div>
     </nav> 
     
-    <div class="container">
-        <h1 class="mt-5">Contact Me</h1>
+    <!-- Other Projects Section -->
+    <section id="other-projects" class="py-5">
+        <div class="container">
+            <h2 class="text-center mb-5">Other Projects</h2>
+            <div class="row row-cols-1 row-cols-md-3 g-4">
+                <div class="col">
+                    <div class="card h-100">
+                        <img src="project1.jpg" class="card-img-top" alt="Project 1">
+                        <div class="card-body">
+                            <h5 class="card-title">Project 1</h5>
+                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed euismod, urna eu bibendum bibendum, elit sapien bibendum sapien, vel bibendum sapien elit vel sapien.</p>
+                            <a href="#" class="btn btn-primary">View Project</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100">
+                        <img src="project2.jpg" class="card-img-top" alt="Project 2">
+                        <div class="card-body">
+                            <h5 class="card-title">Project 2</h5>
+                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed euismod, urna eu bibendum bibendum, elit sapien bibendum sapien, vel bibendum sapien elit vel sapien.</p>
+                            <a href="#" class="btn btn-primary">View Project</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100">
+                        <img src="project3.jpg" class="card-img-top" alt="Project 3">
+                        <div class="card-body">
+                            <h5 class="card-title">Project 3</h5>
+                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed euismod, urna eu bibendum bibendum, elit sapien bibendum sapien, vel bibendum sapien elit vel sapien.</p>
+                            <a href="#" class="btn btn-primary">View Project</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+    <!-- Contact me -->
+    <div class="container bg">
+        <h1 class="mt-4">Contact Me</h1>
         <p>Feel free to get in touch with me using the form below:</p>
 
         <form id="contact-form">
@@ -52,7 +93,7 @@
                 <textarea class="form-control" id="message" name="message" rows="4" required></textarea>
             </div>
 
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <button type="submit" class="btn btn-primary mb-3">Submit</button>
         </form>
     </div>
 
