updated project one card in html, also added font increase in nav-bar

--- a/index.html
+++ b/index.html
@@ -61,13 +61,11 @@
             <div class="card h-100">
               <img src="project1.jpg" class="card-img-top" alt="Project 1" />
               <div class="card-body">
-                <h5 class="card-title">Project 1</h5>
+                <h5 class="card-title">E-Commerce Website</h5>
                 <p class="card-text">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed
-                  euismod, urna eu bibendum bibendum, elit sapien bibendum
-                  sapien, vel bibendum sapien elit vel sapien.
+                  This website represents my inaugural capstone project acquired through Pluralsight. It serves as a straightforward e-commerce platform, offering a visual representation of an exemplary layout. The development is exclusively based on HTML, CSS, and Bootstrap technologies.
                 </p>
-                <a href="#" class="btn btn-primary">View Project</a>
+                <a href="https://github.com/CodingCZR/E-commerce-Website" class="btn btn-primary">View Project</a>
               </div>
             </div>
           </div>
