added aboutme and linkedin format

--- a/index.html
+++ b/index.html
@@ -52,6 +52,26 @@
       </div>
     </nav>
 
+    <!-- About Me Section -->
+    <section id="about-me" class="py-5">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6">
+            <h2>About Me</h2>
+            <p>
+              Hi, my name is Cesar Miranda, can also be announced as Ceaser, and I'm a web developer based in Phoenix, Arizona. I have experience with HTML, CSS, JavaScript, and various web development frameworks such as Bootstrap. I'm passionate about creating beautiful and functional websites that provide a great user experience. I'm currently looking for a full-time position as a web developer.
+            </p>
+            <p>
+              When I'm not coding, you can find me watchinng sports, playing video games, or spending time with my family and friends.
+            </p>
+          </div>
+          <div class="col-md-6">
+            <img src="profile-pic.jpg" alt="Profile Picture" class="img-fluid rounded-circle">
+          </div>
+        </div>
+      </div>
+    </section>
+
     <!-- Other Projects Section -->
     <section id="other-projects" class="py-5 mt-5 hidden">
       <div class="container">
@@ -145,7 +165,22 @@
         </form>
       </div>
     </section>
-
+    <!-- LinkedIn Section -->
+    <section id="linkedin" class="py-5 mt-5">
+      <div class="container">
+        <h2 class="text-center mb-5">LinkedIn</h2>
+        <div class="row">
+          <div class="col-md-6">
+            <p>Connect with me on LinkedIn:</p>
+            <a href="https://www.linkedin.com/in/your-linkedin-profile" target="_blank" class="btn btn-primary">View Profile</a>
+          </div>
+          <div class="col-md-6">
+            <img src="linkedin.png" alt="LinkedIn Logo" class="img-fluid">
+          </div>
+        </div>
+      </div>
+    </section>
+    
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
