added transition effect to linked in element and added github logo to nav

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             >
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">About</a>
+            <a href="https://github.com/CodingCZR"><img src = "github.png" style="width: 40px; width: 40px;"></a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Portfolio</a>
@@ -53,16 +53,16 @@
     </nav>
 
     <!-- About Me Section -->
-    <section id="about-me" class="py-5">
+    <section id="about-me" class="py-5 hidden">
       <div class="container">
         <div class="row">
           <div class="col-md-6">
             <h2>About Me</h2>
             <p>
-              Hi, my name is Cesar Miranda, can also be announced as Ceaser, and I'm a web developer based in Phoenix, Arizona. I have experience with HTML, CSS, JavaScript, and various web development frameworks such as Bootstrap. I'm passionate about creating beautiful and functional websites that provide a great user experience. I'm currently looking for a full-time position as a web developer.
+              Hi, my name is Cesar, can be announced as Ceaser, Miranda and I'm a Front-end Development Student based in Phoenix, Arizona. I have experience with HTML, CSS, JavaScript, and various web development frameworks such as Bootstrap. I'm passionate about learning new languages and pushing myself to be a better programmer
             </p>
             <p>
-              When I'm not coding, you can find me watchinng sports, playing video games, or spending time with my family and friends.
+              When I'm not coding, you can find me watching sports, playing video games, or spending time with my family and friends.
             </p>
           </div>
           <div class="col-md-6">
@@ -166,7 +166,7 @@
       </div>
     </section>
     <!-- LinkedIn Section -->
-    <section id="linkedin" class="py-5 mt-5">
+    <section id="linkedin" class="py-5 mt-5 hidden">
       <div class="container">
         <h2 class="text-center mb-5">LinkedIn</h2>
         <div class="row">
