--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             >
           </li>
           <li class="nav-item">
-            <a href="https://github.com/CodingCZR"><img src = "github.png" style="width: 40px; width: 40px;"></a>
+            <img src = "github.png" style="width: 40px; width: 40px;"><a href="https://github.com/CodingCZR">
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Portfolio</a>
