--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
     />
     <link rel="stylesheet" href="styles.css" />
+    <link rel="icon" href="logo.png">
     <script defer src="script.js"></script>
   </head>
   <body>
@@ -40,10 +41,7 @@
             >
           </li>
           <li class="nav-item">
-            <img src = "github.png" style="width: 40px; width: 40px;"><a href="https://github.com/CodingCZR">
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Portfolio</a>
+            <a href="https://github.com/CodingCZR"><img src="github-icon.png" style="width: 40px;"></a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Contact</a>
@@ -66,7 +64,7 @@
             </p>
           </div>
           <div class="col-md-6">
-            <img src="profile-pic.jpg" alt="Profile Picture" class="img-fluid rounded-circle">
+            <img src="Him.jpeg" alt="Profile Picture" class="align-content-center rounded-circle " style="height: 300px;" >
           </div>
         </div>
       </div>
@@ -77,6 +75,7 @@
       <div class="container">
         <h2 class="text-center mb-5">Other Projects</h2>
         <div class="row row-cols-1 row-cols-md-3 g-4 logos">
+          <!-- E-Commerce Website -->
           <div class="col logo hidden">
             <div class="card h-100">
               <img src="project1.jpg" class="card-img-top" alt="Project 1" />
@@ -85,7 +84,8 @@
                 <p class="card-text">
                   This website represents my inaugural capstone project acquired through Pluralsight. It serves as a straightforward e-commerce platform, offering a visual representation of an exemplary layout. The development is exclusively based on HTML, CSS, and Bootstrap technologies.
                 </p>
-                <a href="https://github.com/CodingCZR/E-commerce-Website" class="btn btn-primary">View Project</a>
+                <a href="https://github.com/CodingCZR/E-commerce-Website" class="btn btn-primary btn-sm">View Project Code </a>
+                <a href="https://codingczr.github.io/E-commerce-Website/" class="btn btn-secondary btn-sm">View Live Project </a>  
               </div>
             </div>
           </div>
